--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,10 +4,10 @@
         "es2021": true
     },
     "extends": "eslint:recommended",
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "rules": {
-    }
+    "rules": {}
 }
