--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "book library",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "live-server",
-    "build": "rollup"
+    "build": "rollup -c --watch"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,10 @@
   },
   "homepage": "https://github.com/artcryptorg/book-library#readme",
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "eslint": "^8.56.0",
     "live-server": "^1.2.2",
-    "rollup": "^4.12.0"
+    "rollup": "^4.12.0",
+    "rollup-plugin-import-css": "^3.4.0"
   }
 }
