--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "live-server": "^1.2.2",
     "rollup": "^4.12.0",
     "rollup-plugin-import-css": "^3.4.0"
+  },
+  "dependencies": {
+    "on-change": "^5.0.1"
   }
 }
